2020-12-25__scrollbar color fix for FF

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -592,7 +592,7 @@ html {
   min-height: 100%;
   box-sizing: border-box;
   /* custom scrollbar FF */
-  scrollbar-color: #ffffff #197BB0;
+  scrollbar-color: #197BB0 #ffffff;
   scrollbar-width: thin;
 }
 
